feat: phase 7 — finalization, AI integration, design system, file uploads, charts, profile management
Backend:
- DataInitializer with rich seed data (8 users, 8 domains, 12 researchers, 24 publications with long abstracts, 10 news)
- Custom exceptions (ResourceNotFound, DuplicateResource, BusinessException)
- Enriched GlobalExceptionHandler with timestamps and proper HTTP codes
- FileStorageService + FileController for image/PDF uploads
- StatsController with charts data (publications by domain/month, users by role)
- ProfileController for user self-service profile and password management
- AiController expanded with 6 AI endpoints (keywords, recommend, semantic-search, ask, summarize, researcher-profile)
- Publication featured flag for homepage curation
- User displayName fix (getUsername returns email for Spring Security, getDisplayName returns actual name)
- DTOs with validation annotations, @Transactional on read methods, externalized config

AI Service:
- 6 endpoints: /keywords, /recommend, /semantic-search, /ask, /researcher-profile, /summarize
- sentence-transformers (all-MiniLM-L6-v2) for semantic search with embedding cache
- Groq LLM integration for generative summaries (TL;DR + vulgarization)
- Documentation_Module_IA.docx with model choices, metrics, and results

Frontend:
- Complete design system (CSS custom properties, layouts, components)
- Dynamic layout: public navbar / admin sidebar / auth-only
- Dashboard with Chart.js (doughnut, bar, pie) + KPI cards
- File upload UI for publications (PDF) and news (images)
- Publications featured toggle + researcher/domain filters
- User profile page with edit info + change password
- AI features exposed: keywords, recommendations, summaries on publication detail
- Semantic search + Q&A on home page
- Researcher AI profile modal (keywords + similar researchers)
- Login/register with back-to-home button
- User status toggle switch in admin

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>